{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 91,
  "lineage": "632ce3e8-e068-8070-4f2a-b2b41d68831a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab52c84b152b69f2",
            "arn": "arn:aws:ec2:ap-south-1:781897846445:elastic-ip/eipalloc-0ab52c84b152b69f2",
            "association_id": "eipassoc-0cacf19001e6e375d",
            "domain": "vpc",
            "id": "eipalloc-0ab52c84b152b69f2",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e79c7080a6320eb5",
            "private_dns": "ip-10-0-1-92.ap-south-1.compute.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-3-109-46-160.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.46.160",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "tf-nat-gw"
            },
            "tags_all": {
              "Name": "tf-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "eipalloc-0ab52c84b152b69f2",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:781897846445:instance/i-04698c22e656dc56b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04698c22e656dc56b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-081cb7747970b865a"
              }
            ],
            "primary_network_interface_id": "eni-081cb7747970b865a",
            "private_dns": "ip-10-0-1-151.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_ip": "3.108.219.32",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-057a484c8a4f04785",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d7ba2c331f00a88",
            "tags": {
              "Name": "tf-example"
            },
            "tags_all": {
              "Name": "tf-example"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0314bb3cd02d9143b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "i-04698c22e656dc56b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_port_80",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:internet-gateway/igw-09c359e5778b24385",
            "id": "igw-09c359e5778b24385",
            "owner_id": "781897846445",
            "region": "ap-south-1",
            "tags": {
              "Name": "tf-gw"
            },
            "tags_all": {
              "Name": "tf-gw"
            },
            "vpc_id": "vpc-07d6fa34118b47591"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "igw-09c359e5778b24385",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab52c84b152b69f2",
            "association_id": "eipassoc-0cacf19001e6e375d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0934a98f23766e9b6",
            "network_interface_id": "eni-0e79c7080a6320eb5",
            "private_ip": "10.0.1.92",
            "public_ip": "3.109.46.160",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d7ba2c331f00a88",
            "tags": {
              "Name": "tf-nat-gw"
            },
            "tags_all": {
              "Name": "tf-nat-gw"
            },
            "vpc_id": "vpc-07d6fa34118b47591"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "nat-0934a98f23766e9b6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.tf-nat-gw",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:route-table/rtb-0877f734614ba3503",
            "id": "rtb-0877f734614ba3503",
            "owner_id": "781897846445",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0934a98f23766e9b6",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-rt"
            },
            "tags_all": {
              "Name": "tf-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d6fa34118b47591"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "rtb-0877f734614ba3503",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.tf-nat-gw",
            "aws_nat_gateway.tf-nat-gw",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:route-table/rtb-0b01c698f3a209ac8",
            "id": "rtb-0b01c698f3a209ac8",
            "owner_id": "781897846445",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c359e5778b24385",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-public-rt"
            },
            "tags_all": {
              "Name": "tf-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d6fa34118b47591"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "rtb-0b01c698f3a209ac8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.tf-gw",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004baf050dc76b8a6",
            "region": "ap-south-1",
            "route_table_id": "rtb-0877f734614ba3503",
            "subnet_id": "subnet-0e64e560a0b9d386c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "rtbassoc-004baf050dc76b8a6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.tf-nat-gw",
            "aws_nat_gateway.tf-nat-gw",
            "aws_route_table.tf-private-rt",
            "aws_subnet.tf-private-subnet-1",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0872150613873cc99",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b01c698f3a209ac8",
            "subnet_id": "subnet-01d7ba2c331f00a88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "rtbassoc-0872150613873cc99",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.tf-gw",
            "aws_route_table.tf-public-rt",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:security-group/sg-0314bb3cd02d9143b",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0314bb3cd02d9143b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_port_80",
            "name_prefix": "",
            "owner_id": "781897846445",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_port_80"
            },
            "tags_all": {
              "Name": "allow_port_80"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d6fa34118b47591"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "sg-0314bb3cd02d9143b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:subnet/subnet-0e64e560a0b9d386c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e64e560a0b9d386c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781897846445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tf-private-subnet-1"
            },
            "tags_all": {
              "Name": "tf-private-subnet-1"
            },
            "vpc_id": "vpc-07d6fa34118b47591"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "subnet-0e64e560a0b9d386c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:subnet/subnet-01d7ba2c331f00a88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d7ba2c331f00a88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781897846445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tf-public-subnet-1"
            },
            "tags_all": {
              "Name": "tf-public-subnet-1"
            },
            "vpc_id": "vpc-07d6fa34118b47591"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "subnet-01d7ba2c331f00a88",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:vpc/vpc-07d6fa34118b47591",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d9ba224ca771b136",
            "default_route_table_id": "rtb-0e97b49c1439f86da",
            "default_security_group_id": "sg-08679cdb36751f795",
            "dhcp_options_id": "dopt-07b8dbc8fa9bc16e3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d6fa34118b47591",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e97b49c1439f86da",
            "owner_id": "781897846445",
            "region": "ap-south-1",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "vpc-07d6fa34118b47591",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:security-group-rule/sgr-0937aed7cfcd2caa5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0937aed7cfcd2caa5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0314bb3cd02d9143b",
            "security_group_rule_id": "sgr-0937aed7cfcd2caa5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "sgr-0937aed7cfcd2caa5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_port_80",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:security-group-rule/sgr-0eee80b0940691a77",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0eee80b0940691a77",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0314bb3cd02d9143b",
            "security_group_rule_id": "sgr-0eee80b0940691a77",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "sgr-0eee80b0940691a77",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_port_80",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:781897846445:security-group-rule/sgr-0d86f57abdc9f6f96",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d86f57abdc9f6f96",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0314bb3cd02d9143b",
            "security_group_rule_id": "sgr-0d86f57abdc9f6f96",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "781897846445",
            "id": "sgr-0d86f57abdc9f6f96",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_port_80",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    }
  ]
}